--- a/surfacingGenerator.html
+++ b/surfacingGenerator.html
@@ -79,7 +79,7 @@
 			// Declare global variables
 			   let toolDiameter, stockSizeX, stockSizeY, feedrate, spindleSpeed, depthOfCut, maxDepth, currentDepth, angle, xyZeroPoint, cuttingMode, stepoverPercentage, units;
 			   let xZero, yZero;
-						
+			//Code by Neil Ferreri			
 			// Function to generate the G-Code for surfacing
 			function generateGCode() {
 				// Get the input values
